# Calculator

./: .gitignore  CMakeLists.txt  README.md  file_id.diz  readme.txt  readmr.txt  vc.build.release.cmd  whatsnew_en.txt  whatsnew_ru.txt
doc/en/: license.txt  regform.txt  whatsnew.txt
doc/ru/: license.txt  regform.txt  whatsnew.txt
res/: calce.hlf.in  calce.lng  calcr.hlf.in  calcr.lng  calcset.csr  file_id.diz  file_id.diz.in  reset_config.reg  shotcuts_c.reg  shotcuts_l.reg  user-examples.csr
res/units/: angle.csr  area.csr  length.csr  mass.csr  pressure.csr  speed.csr  time.csr
src/: CMakeLists.txt
src/plugcalc/: api-far2.cpp  api-far3.cpp  api.cpp  api.h  calc.cpp  calc.h  calc.rc  calc.sln  calc.vcxproj  config.cpp  messages.h  newparse.cpp  newparse.h  plugcalc.def  sarg.cpp  sarg.h  syntax.cpp  syntax.h  version.h
src/shared/farplugin/2.0/: farcolor.hpp  farkeys.hpp  plugin.hpp
src/shared/farplugin/3.0/: farcolor.hpp  plugin.hpp
src/shared/hashmap/: HashMap.h
src/shared/mathexpression/: MathExpressionBase.h
src/shared/sgml/: sgml.cpp  sgml.h  sgmledit.cpp
src/shared/ttmath/: ttmath.h  ttmathbig.h  ttmathparser.h  ttmathtypes.h  ttmathuint.h
